infrastructure/git/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git
  namespace: git
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: git
  template:
    metadata:
      labels:
        app: git
    spec:
      containers:
      - name: git
        image: codeberg.org/forgejo/forgejo:16.0.5@sha256:cf5f5ae6acf2ababca0ee3d255705b83a47f35b25e07fc931d694d60664053fe
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: git-data
          mountPath: /data
      volumes:
      - name: git-data
        hostPath:
          path: /data/crypt/git
          type: DirectoryOrCreate
