infrastructure/git/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git
  namespace: git
spec:
  selector:
    app: git
  ports:
    - port: 3000
      targetPort: 3000
