infrastructure/git/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git
  namespace: git
spec:
  rules:
    - host: git.khazadum.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: git
                port:
                  number: 3000
